# kermac

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  TODO.md  main.py  pyproject.toml  setup.py
csrc/: bindings.cpp  kermac.h  kermac_pytorch.h  p_norm.cu  p_norm_gradient.cu  p_norm_pytorch.cu
csrc/include/: kermac_internal_common.cuh  p_norm.cuh  p_norm_impl.cuh
examples/: batched_cdist.py  build_a_kernel.py  build_a_kernel_workshop.py  cdist.py  cdist_grad.py  linalg.py  main.py  workflow.py
include/: build_a_kernel.cuh  build_a_kernel_dispatch.cuh  build_a_kernel_impl.cuh  build_a_kernel_workshop_impl.cuh  build_kernel_impl.cuh  cutlass_little_test.cuh  kermac.cuh  kermac_internal_common.cuh  p_norm.cuh  p_norm_gradient.cuh  p_norm_gradient_impl.cuh  p_norm_impl.cuh  scaled_gemm.cuh  syrk_test.cuh
kermac/csrc/: bindings.cpp  kermac.h  p_norm.cu  utils.cu
notes/: notes.md
sandbox/: run_cutlass.py  xpotrf.py  xpotrf_dev.py
scripts/: cmake_build_nvcc118.sh  env_create_nvcc118.sh
src/kermac/: __init__.py  build_a_kernel.py  build_a_kernel_workshop.py  cdist.py  cdist_grad.py  cdist_t.py  common.py  cuda_jit_cache.py  disk_cache.py  module.py  module_cache.py  paths.py
src/kermac/linalg/: __init__.py  cholesky.py  common.py  lu_decomposition.py  syevd.py
src/kermac/module_cache/: module_cache.py
test/: cdist_grad.py
tests/: test_cdist.py  test_cdist_grad.py
